@startuml
hide circle
class PlansRepository <<interface>>

title Class Diagram / As marketing director, I want to cease a plan

class Plans {
    - name
    - description
    - numberOfMinutes
    - maximumNumberOfUsers
    - musicCollection
    - musicSuggestion
    - annualFee
    - monthlyFee
    - active
    - promoted
    - feeRevision
    - deleted
}

class PlansViewMapper {
    + toPlansView(Plans plans): PlansView
}

class PlansController {
    + cease(final WebRequest request, final String name): ResponseEntity<PlansView>
}

class PlansService {
    + cease(String name, final long desiredVersion): int
}

interface PlansRepository {
    + findByName_Name(String name): Optional<Plans>
    + ceaseByPlan(Plans plans, Long desiredVersion): int
}

interface SubscriptionsRepository {
    + existsByPlanAndUserNotNull(Plans plans): boolean
}

PlansController --> PlansService: uses
PlansService --> PlansRepository: uses
PlansService --> SubscriptionsRepository: uses
PlansRepository --> Plans: <<record>>
PlansService --> Plans: uses
PlansController --> PlansViewMapper: uses

@enduml
